Concluido tela de autenticação com login e senha Parei na Aula 295

--- a/src/main/webapp/pages/produtosEdicao.xhtml
+++ b/src/main/webapp/pages/produtosEdicao.xhtml
@@ -9,7 +9,8 @@
 <title>Produtos</title>
 
 <f:metadata>
-	<f:viewAction action="#{produtoBean3.listar()}" />
+	<f:viewParam name="codigo" value="#{produtoBean3.codigoProduto}" required="true" requiredMessage="O campo código do produto é Obrigatório" />
+	<f:viewAction action="#{produtoBean3.carregarEdicao()}" />
 </f:metadata>
 
 </h:head>
@@ -22,13 +23,13 @@
 
 					<p:outputLabel value="Descrição:" for="descricao" />
 					<p:inputText maxlength="50" size="50"
-						value="#{produtoBean.produto.descricao}" id="descricao"
+						value="#{produtoBean3.produto.descricao}" id="descricao"
 						required="true" requiredMessage="Campo Descrição Vazio" />
 
 
 					<p:outputLabel value="Quantidade:" for="quantidade" />
 					<p:inputText maxlength="5" size="10"
-						value="#{produtoBean.produto.quantidade}" id="quantidade"
+						value="#{produtoBean3.produto.quantidade}" id="quantidade"
 						required="true" requiredMessage="Campo Quantidade Vazio"
 						converterMessage="Informe um valor válido para o Campo 'Quantidade'"
 						validatorMessage="Informe um valor entre 0 e 1000 para o campo 'Quantidade'">
@@ -37,7 +38,7 @@
 
 					<p:outputLabel value="Preço:" for="preco" />
 					<p:inputText maxlength="7" size="10"
-						value="#{produtoBean.produto.preco}" id="preco" required="true"
+						value="#{produtoBean3.produto.preco}" id="preco" required="true"
 						requiredMessage="Campo Preço vazio"
 						converterMessage="Informe um valor válido para o Campo 'preço'"
 						validatorMessage="Informe um valor entre 0,01 e 9999,99 para o Campo 'Preço	'">
@@ -47,12 +48,12 @@
 
 					<p:outputLabel value="Fabricante: " for="fabricante" />
 					<p:selectOneMenu filter="true"
-						value="#{produtoBean.produto.fabricante}"
+						value="#{produtoBean3.produto.fabricante}"
 						converter="omnifaces.SelectItemsConverter" required="true"
 						requiredMessage="Campo 'Estado' é obrigatorio" id="fabricante">
 						<f:selectItem itemValue="#{fabricante}"
 							itemLabel="Selecione um Fabricante" noSelectionOption="true" />
-						<f:selectItems value="#{produtoBean.fabricantes}"
+						<f:selectItems value="#{produtoBean3.fabricantes}"
 							itemLabel="#{fabricante.descricao}" itemValue="#{fabricante}"
 							var="fabricante" />
 					</p:selectOneMenu>
@@ -60,7 +61,7 @@
 				</h:panelGrid>
 				<h:panelGrid columns="2">
 					<p:commandButton value="Editar" update=":mensagem"/>
-					<p:commandButton value="Voltar" update=":mensagem"/>
+					<p:button value="Voltar" update=":mensagem" outcome="/pages/produtosListagem.xhtml"/>
 				</h:panelGrid>
 				</p:panel>
 			</h:form>
