--- a/src/main/webapp/pages/vendas.xhtml
+++ b/src/main/webapp/pages/vendas.xhtml
@@ -6,6 +6,12 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	template="/templates/modelo.xhtml">
+	
+	<ui:define name="metadata" >
+		<f:metadata>
+			<f:viewAction action="#{vendaBean.novo}" />
+		</f:metadata>
+	</ui:define>
 
 	<ui:define name="conteudo">
 
